--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "aws-sdk": "^2.1194.0",
+    "bootstrap": "^4.6.0",
     "buffer": "^6.0.3",
     "FileReader": "^0.10.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^1.6.5",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
